syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "ActivityFortuneCatTypeProto";

package fortuneCatType;


enum RequestType{

	GET_GOLD = 1;//摇奖获得钻石
	VIEW_OTHER_PLAYER=2;//查看其它玩家

}

message ActivityCommonReqMsg{
	required RequestType reqType = 1;//请求功能协议类型

}


message ActivityCommonRspMsg{
	required RequestType reqType = 1;//回应的功能协议类型
	required bool isSuccess = 2;//是否成功处理
	optional string tipMsg = 3;//提示消息，可以是成功，也可以是失败的提示消息
	optional int32 getGold = 4;//反馈获得的钻石
	optional string getRecord = 5;//反馈其它人的记录
}